--- a/.github/workflows/github_registry.yml
+++ b/.github/workflows/github_registry.yml
@@ -17,6 +17,7 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
+          registry: ghcr.io
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       -
@@ -29,4 +30,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
+          tags: ghcr.io/${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
