--- a/.github/workflows/github_registry.yml
+++ b/.github/workflows/github_registry.yml
@@ -22,6 +22,13 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - 
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GH_ACCESS_TOKEN }}        
       -
         name: Build and push
         uses: docker/build-push-action@v2
@@ -29,4 +36,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
+          tags: ghcr.io/${{ github.repository_owner }}/simplewhale:latest
