--- a/.github/workflows/github_registry.yml
+++ b/.github/workflows/github_registry.yml
@@ -37,3 +37,5 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/simplewhale:latest
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository_owner }}/simplewhale:buildcache
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository_owner }}/simplewhale:buildcache,mode=max
